# thermo-core-engine

./: .dockerignore  .gitignore  Dockerfile  PRD_thermo-core_v1.md  README.md  debug.out  history.db  pyproject.toml  render.yaml  run_pytest.py  run_pytest2.py  run_pytest3.py  run_pytest_e2e.py  test_db.py  test_dynamic.py  test_dynamic2.py  test_if.py  test_if2.py  test_if3.out  test_if3.py  test_incidents.py  test_out.txt  test_pdf.py  verify_logging.py
.github/workflows/: ci.yml
.trae/documents/: 2026-03-31-pragmatic-upgrade.md  2026-03-31-report-polish-spec.md  2026-03-31-report-polish.md  2026-03-31-thermoneural-mvp.md  2026-03-31-world-class-upgrade.md
.trae/specs/core-engine-v2/: checklist.md  spec.md  tasks.md
.trae/specs/engine-polish/: checklist.md  spec.md  tasks.md
.trae/specs/improve-data-presentation/: checklist.md  spec.md  tasks.md
.trae/specs/maintenance-decision-engine/: checklist.md  spec.md  tasks.md
.trae/specs/phase-2-upgrades/: checklist.md  spec.md  tasks.md
.trae/specs/robust-large-data/: checklist.md  spec.md  tasks.md
.trae/specs/thorough-headed-test/: checklist.md  spec.md  tasks.md
.trae/specs/v1-hardening-baseline/: checklist.md  spec.md  tasks.md
docs/: outreach_assets.md
scripts/: debug_headed_test.py  test_real_data.py
src/: app.py
src/thermo_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/thermoneural/config/: rules.yaml
src/thermoneural/data/: synthetic.py  validation.py
tests/: test_anomaly.py  test_e2e.py  test_expert_system.py  test_reports.py  test_synthetic.py
(+7 files in other folders)
