[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermo-core"
version = "0.1.0"
description = "Thermo-core project"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "scikit-learn",
    "plotly",
    "weasyprint",
    "jinja2",
    "joblib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "playwright",
    "pymupdf",
    "pytest-playwright",
    "ruff"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C90",# mccabe
    "N",  # pep8-naming
]
ignore = ["C901", "E501", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
